// Original file: proto/rock_paper_scissors.proto


export interface RockPaperScissorsGameState {
  'title'?: (string);
  'playerScore'?: (number);
  'opponentScore'?: (number);
}

export interface RockPaperScissorsGameState__Output {
  'title': (string);
  'playerScore': (number);
  'opponentScore': (number);
}
